# mlops_pedestrians

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
mlops_pedestrians/: dataset.py  features.py  plots.py
mlops_pedestrians/modeling/: predict.py  train.py
